    - Added support for the VK_KHR_wayland_surface extension.
    - Fixed a Vulkan performance regression that affected rFactor2.
  * libegl-nvidia0: Ship new library libnvidia-vulkan-producer.so.#VERSION#
    but do not provide alternatives since it is unclear how this undocumented
    SONAME-less library is supposed to be used.
  * Add Build-Depends: libnvidia-egl-wayland-dev.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 07 Sep 2021 16:24:57 +0200

nvidia-graphics-drivers (470.57.02-3) unstable; urgency=medium

  * Backport drm_device_has_pdev and set_current_state changes from 470.63.01
    to fix kernel module build for Linux 5.14.  (Closes: #994860)
  * Generate tight dependencies on libnvidia*-glcore/libnvidia*-eglcore.
    (Closes: #992057)
  * Bump Standards-Version to 4.6.0. No changes needed.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 22 Sep 2021 10:56:55 +0200

nvidia-graphics-drivers (470.57.02-2) unstable; urgency=medium

  * Upload to unstable.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 02 Aug 2021 13:23:11 +0200

nvidia-graphics-drivers (470.57.02-1) experimental; urgency=medium

  * New upstream production branch release 470.57.02 (2021-07-19).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.  (Closes: #991351)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211
    - Fixed a bug that could cause flickering in Blender and Steam when
      running on Xwayland.
    - Fixed a bug that caused GTK+3 applications using the GtkGLArea class
      to crash when running on Xwayland.
    - Added a workaround for DOOM Eternal, which avoids an application bug where
      Vulkan swapchain recreation events are not properly handled. On desktops
      like GNOME where the window is initially redirected to the compositor,
      this may prevent the game from flipping (and thus enabling G-SYNC).
    - Added a workaround for Far Cry 5 when run through DXVK, which avoids a